[package]
name = "porticus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
tokio = {version = "1.17.0",features = ["macros"]}
spin = "0.9.3"
futures = "0.3.21"
pin-project = "1.0.10"
atomic-option = "0.1.2"